fixed issue with 'body' element not covering entire screen
html body element would not fit entire screen on smaller screens

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,22 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|EB+Garamond&display=swap');
 
-body {
-    margin: 0;
-    padding: 0;
+html, body {
     font-family: 'EB Garamond', cursive;
     color: #282c34 !important;
     overflow-x: hidden;
 }
 
 .section {
-    /*padding-left: 5%;*/
-    /*padding-right: 5%;*/
     position: relative;
 }
 
 .section-container {
     width: 100%;
-    /*max-width: 400px;*/
     margin-right: auto;
     margin-left: auto;
     padding-top: 100px;
@@ -27,22 +22,15 @@ body {
     padding: 0;
 }
 
-.section-container.about-component {
-
-}
-
 .home-section {
     background: #16151C;
 }
 
 .about-section {
-    /*background: #d8ab94;*/
     background: #eae7dc;
-    /*background-size: cover;*/
 }
 
 .portfolio-section {
-    /*background: #4C5364;*/
     background: #eae7dc;
 }
 
@@ -52,20 +40,16 @@ body {
 
 .footer-section {
     background: #110f17;
-    /*padding: 70px 0 50px 0;*/
-    /*height: 70px;*/
 }
 
 .section-container.footer-component {
     height: 210px;
-    /*padding: 0;*/
 }
 
 @media screen and (max-width: 768px) {
     .header-title-bar {
         background: black;
         height: 3px;
-        /*width: 70px;*/
         margin: 2px 150px 50px 150px;
     }
 
