--- a/client/src/components/about-component/about.css
+++ b/client/src/components/about-component/about.css
@@ -4,6 +4,7 @@
     margin-left: auto;
     width: 1160px;
     color: black;
+    top: 0; right: 0; bottom: 0; left: 0;
 }
 
 p {
