--- a/client/src/components/home-component/nav.css
+++ b/client/src/components/home-component/nav.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|EB+Garamond&display=swap');
 
 .nav {
-    /*padding-right: 70px;*/
     padding-top: 15px;
     font-size: large;
     font-weight: normal;
@@ -20,32 +19,56 @@
     padding-bottom: 10px;
 }
 
-/*#resume {*/
-    /*color: #A6E22E;*/
-    /*background-color: transparent;*/
-    /*margin-right: 25px;*/
-    /*border: 2px solid;*/
-    /*border-radius: 3px;*/
-    /*padding: 0.75rem 1rem;*/
-    /*line-height: 1;*/
-    /*text-decoration: none;*/
-    /*cursor: pointer;*/
-    /*transition: all 0.3s cubic-bezier(0.65, 0.4, 0.33, 1) 0s;*/
-/*}*/
-
-/*#resume:hover {*/
-    /*!*color: white;*!*/
-    /*background-color: #282c34;*/
-/*}*/
-
 .nav-link:hover {
     border-bottom: 3px solid;
     color: white;
 }
 
 .btn-resume {
-    /*padding-top: 15px;*/
     font-size: large;
     font-weight: normal;
     text-transform: uppercase;
+}
+
+.nav .nav-item .nav-link.icon {
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+    .nav .nav-item:not(:last-child) {
+        display: none;
+    }
+    .nav .nav-item:first-child {
+        display: block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav .nav-item .nav-link.icon {
+        float: right;
+        display: block;
+    }
+    .nav .nav-item .nav-link.icon:hover {
+        border-bottom: none;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav.responsive {
+        position: relative;
+        flex-direction: column;
+        display: flex;
+    }
+    .nav.responsive .nav-item .nav-link.icon {
+        position: relative;
+        margin: auto;
+        /*right: 1px;*/
+        /*top: 10px;*/
+    }
+    .nav.responsive .nav-item {
+        margin: auto;
+        /*float: none;*/
+        display: block;
+        text-align: center;
+    }
 }
